update _coqproj, makefile and examples

--- a/coq/CoqMakefile.conf
+++ b/coq/CoqMakefile.conf
@@ -8,7 +8,7 @@
 #                                                                             #
 ###############################################################################
 
-COQMF_VFILES = theories/MachineIntegers.v theories/IntTypes.v theories/NewLib.v
+COQMF_VFILES = theories/MachineIntegers.v theories/Lib.v
 COQMF_MLIFILES = 
 COQMF_MLFILES = 
 COQMF_MLGFILES = 
@@ -24,8 +24,8 @@ COQMF_CMDLINE_VFILES =
 
 COQMF_OCAMLLIBS = 
 COQMF_SRC_SUBDIRS = 
-COQMF_COQLIBS =  -Q vendor/simple-classes/ SimpleClasses -R theories/ Hacspec
-COQMF_COQLIBS_NOML = -Q vendor/simple-classes/ SimpleClasses -R theories/ Hacspec
+COQMF_COQLIBS =   -R theories/ Hacspec
+COQMF_COQLIBS_NOML =  -R theories/ Hacspec
 COQMF_CMDLINE_COQLIBS =   
 
 ###############################################################################
@@ -35,13 +35,14 @@ COQMF_CMDLINE_COQLIBS =
 ###############################################################################
 
 COQMF_LOCAL=0
-COQMF_COQLIB=/home/milo/.opam/coq-8.12/lib/coq/
-COQMF_DOCDIR=/home/milo/.opam/coq-8.12/doc/
-COQMF_OCAMLFIND=/home/milo/.opam/coq-8.12/bin/ocamlfind
+COQMF_COQLIB=/home/milo/.opam/coq-8.13/lib/coq/
+COQMF_DOCDIR=/home/milo/.opam/coq-8.13/doc/
+COQMF_OCAMLFIND=/home/milo/.opam/coq-8.13/bin/ocamlfind
 COQMF_CAMLFLAGS=-thread -rectypes -w +a-4-9-27-41-42-44-45-48-58-67   -safe-string -strict-sequence
 COQMF_WARN=-warn-error +a-3
 COQMF_HASNATDYNLINK=true
-COQMF_COQ_SRC_SUBDIRS=config lib clib kernel library engine pretyping interp gramlib gramlib/.pack parsing proofs tactics toplevel printing ide stm vernac plugins/btauto plugins/cc plugins/derive plugins/extraction plugins/firstorder plugins/funind plugins/ltac plugins/micromega plugins/nsatz plugins/omega plugins/rtauto plugins/setoid_ring plugins/ssr plugins/ssrmatching plugins/ssrsearch plugins/syntax
+COQMF_COQ_SRC_SUBDIRS=config lib clib kernel library engine pretyping interp gramlib gramlib/.pack parsing proofs tactics toplevel printing ide stm vernac plugins/btauto plugins/cc plugins/derive plugins/extraction plugins/firstorder plugins/funind plugins/ltac plugins/micromega plugins/nsatz plugins/omega plugins/ring plugins/rtauto plugins/ssr plugins/ssrmatching plugins/ssrsearch plugins/syntax
+COQMF_COQ_NATIVE_COMPILER_DEFAULT=no
 COQMF_WINDRIVE=
 
 ###############################################################################
@@ -51,4 +52,4 @@ COQMF_WINDRIVE=
 ###############################################################################
 
 COQMF_OTHERFLAGS = 
-COQMF_INSTALLCOQDOCROOT = orphan_SimpleClasses_Hacspec
+COQMF_INSTALLCOQDOCROOT = Hacspec
