--- a/examples/p256/Cargo.toml
+++ b/examples/p256/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/p256.rs"
 
 [dependencies]
 hacspec-lib = { path = "../../lib" }
+backtrace = "0.3"
 
 [dev-dependencies]
 serde_json = "1.0"
