update coq folder structure

--- a/coq/CoqMakefile.conf
+++ b/coq/CoqMakefile.conf
@@ -8,7 +8,7 @@
 #                                                                             #
 ###############################################################################
 
-COQMF_VFILES = theories/MachineIntegers.v theories/Lib.v
+COQMF_VFILES = src/MachineIntegers.v src/Lib.v src/Sha256.v src/hacspechmac.v
 COQMF_MLIFILES = 
 COQMF_MLFILES = 
 COQMF_MLGFILES = 
@@ -24,8 +24,8 @@ COQMF_CMDLINE_VFILES =
 
 COQMF_OCAMLLIBS = 
 COQMF_SRC_SUBDIRS = 
-COQMF_COQLIBS =   -R theories/ Hacspec
-COQMF_COQLIBS_NOML =  -R theories/ Hacspec
+COQMF_COQLIBS =   -R src/ Hacspec
+COQMF_COQLIBS_NOML =  -R src/ Hacspec
 COQMF_CMDLINE_COQLIBS =   
 
 ###############################################################################
@@ -51,5 +51,5 @@ COQMF_WINDRIVE=
 #                                                                             #
 ###############################################################################
 
-COQMF_OTHERFLAGS = 
+COQMF_OTHERFLAGS = -w all
 COQMF_INSTALLCOQDOCROOT = Hacspec
