--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -5,6 +5,7 @@ on: [push, pull_request, release]
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     strategy:
       matrix:
         os:
