update coq examples, coq lib

--- a/coq/CoqMakefile.conf
+++ b/coq/CoqMakefile.conf
@@ -8,7 +8,7 @@
 #                                                                             #
 ###############################################################################
 
-COQMF_VFILES = src/MachineIntegers.v src/Lib.v src/Bls.v src/Sha256.v src/Chacha20.v src/Poly1305.v
+COQMF_VFILES = src/MachineIntegers.v src/Lib.v src/Bls.v src/Chacha20.v src/Poly1305.v src/Chacha20poly1305.v src/Curve25519.v src/Sha256.v src/Aes.v
 COQMF_MLIFILES = 
 COQMF_MLFILES = 
 COQMF_MLGFILES = 
