--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ members = [
     "examples/ntru-prime",
     "examples-unsafe",
     "examples/riot-bootloader",
+    "examples/riot-runqueue",
     "examples/hmac",
     "examples/hkdf",
     "examples/p256",
@@ -49,6 +50,7 @@ default-members = [
     "examples/ntru-prime",
     "examples-unsafe",
     "examples/riot-bootloader",
+    "examples/riot-runqueue",
     "examples/hmac",
     "examples/hkdf",
     "examples/p256",
