--- a/fstar/Makefile
+++ b/fstar/Makefile
@@ -5,7 +5,9 @@
 FSTAR ?= $(FSTAR_HOME)/bin/fstar.exe --z3rlimit_factor 32
 
 # The root files of your project, from which to begin scanning dependences
-FSTAR_FILES ?= Hacspec.Poly1305.fst Hacspec.Chacha20.fst Hacspec.Chacha20Poly1305.fst Hacspec.Riot.fst
+FSTAR_FILES ?= Hacspec.Poly1305.fst Hacspec.Chacha20.fst \
+	Hacspec.Chacha20Poly1305.fst \
+	Hacspec.Riot.Bootloader.fst Hacspec.Riot.Runqueue.fst
 
 # The paths to related files which to include for scanning
 #   -- No need to add FSTAR_HOME/ulib; it is included by default
