--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "lib",
+    "protocols/tls_cryptolib",
     "provider",
     "utils/dev",
     "utils/derive",
@@ -33,6 +34,7 @@ members = [
 ]
 default-members = [
     "lib",
+    "protocols/tls_cryptolib",
     "provider",
     "utils/dev",
     "utils/derive",
