--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -16,5 +16,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Typecheck
+      - name: Typecheck Primitives
         run: examples/typecheck_examples.sh
+      - name: Typecheck Protocols
+        run: protocols/typecheck_protocols.sh
