--- a/examples/aes-ccm/Cargo.toml
+++ b/examples/aes-ccm/Cargo.toml
@@ -12,4 +12,6 @@ hacspec-lib = { path = "../../lib" }
 hacspec-aes = { path = "../aes", version = "0.1.0" }
 
 [dev-dependencies]
+serde_json = "1.0"
+serde = {version = "1.0", features = ["derive"]}
 hacspec-dev = { path = "../../utils/dev" }
