Add coverage unit test example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,3 @@
-cargo-features = ["edition2021"]
-
 [workspace]
 members = [
     "lib",
@@ -33,6 +31,7 @@ members = [
     "examples/aes",
     "examples/gf128",
     "examples/aes128-gcm",
+    "examples/coverage-example",
 ]
 default-members = [
     "lib",
@@ -63,5 +62,6 @@ default-members = [
     "examples/aes",
     "examples/gf128",
     "examples/aes128-gcm",
+    "examples/coverage-example",
 ]
 exclude = [ "language" ]
