--- a/fstar/Makefile
+++ b/fstar/Makefile
@@ -7,8 +7,8 @@ FSTAR ?= $(FSTAR_HOME)/bin/fstar.exe --z3rlimit_factor 32
 # The root files of your project, from which to begin scanning dependences
 FSTAR_FILES ?= Hacspec.Poly1305.fst Hacspec.Chacha20.fst \
 	Hacspec.Chacha20Poly1305.fst \
-	Hacspec.SHA256.fst Hacspec.SHA3.fst Hacspec.P256.fst \
-	Hacspec.Curve25519.fst \
+	Hacspec.Sha256.fst Hacspec.Sha3.fst Hacspec.P256.fst \
+	Hacspec.Curve25519.fst Hacspec.Hmac.fst \
 	Hacspec.Riot.Bootloader.fst Hacspec.Riot.Runqueue.fst
 
 # The paths to related files which to include for scanning
