--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "examples/aes",
     "examples/gf128",
     "examples/aes128-gcm",
+    "examples/bls12-381-hash",
 ]
 default-members = [
     "lib",
@@ -61,5 +62,6 @@ default-members = [
     "examples/aes",
     "examples/gf128",
     "examples/aes128-gcm",
+    "examples/bls12-381-hash",
 ]
 exclude = [ "language" ]
