HKDF lax-typechecks Had to remove the array::capacity function because it is not compatible with the way we handle arrays in the F* backend

--- a/examples/hkdf/Cargo.toml
+++ b/examples/hkdf/Cargo.toml
@@ -10,3 +10,4 @@ path = "src/hkdf.rs"
 [dependencies]
 hacspec-lib = { path = "../../lib" }
 hacspec-hmac = { path = "../hmac" }
+hacspec-sha256 = { path = "../sha256" }
