equiv to rustref

--- a/examples/bls12-381-hash/Cargo.toml
+++ b/examples/bls12-381-hash/Cargo.toml
@@ -13,7 +13,13 @@ path = "src/bls12-381-hash.rs"
 hacspec-lib = { path = "../../lib" }
 hacspec-bls12-381 = { path = "../bls12-381" }
 hacspec-sha256 = { path = "../sha256" }
+num-bigint = "0.4.2"
 
 [dev-dependencies]
 quickcheck = "1"
 quickcheck_macros = "1"
+h2c-rust-ref = { git = "https://github.com/armfazh/h2c-rust-ref" }
+redox-ecc = { git = "https://github.com/armfazh/redox-ecc" }
+# amcl = { version = "0.3.0",  git = "https://github.com/apache/incubator-milagro-crypto-rust", features = ["bls381"] }
+pairing-plus = { git = "https://github.com/algorand/pairing-plus" }
+sha2 = "0.8"
