--- a/examples/bls12-381-hash/Cargo.toml
+++ b/examples/bls12-381-hash/Cargo.toml
@@ -13,15 +13,14 @@ path = "src/bls12-381-hash.rs"
 hacspec-lib = { path = "../../lib" }
 hacspec-bls12-381 = { path = "../bls12-381" }
 hacspec-sha256 = { path = "../sha256" }
-num-bigint = "0.4.2"
 
 [dev-dependencies]
 quickcheck = "1"
 quickcheck_macros = "1"
 h2c-rust-ref = { git = "https://github.com/armfazh/h2c-rust-ref" }
 redox-ecc = { git = "https://github.com/armfazh/redox-ecc" }
-amcl = { version = "0.3.0",  git = "https://github.com/apache/incubator-milagro-crypto-rust", features = ["bls381"] }
-pairing-plus = { git = "https://github.com/algorand/pairing-plus" }
-sha2-8 = { package = "sha2", version = "0.8" }
-sha2-9 = { package = "sha2", version = "0.9" }
+amcl = { version = "0.3.0",  git = "https://github.com/apache/incubator-milagro-crypto-rust", features = ["bls381"] } # published crate haven't implemented hash to curve
+pairing-plus = { git = "https://github.com/algorand/pairing-plus" } # published crate have a different implentation of sgn0
+sha2-08 = { package = "sha2", version = "0.8" }
+sha2-09 = { package = "sha2", version = "0.9" }
 bls12_381 = {version = "0.6.0", features = ["experimental"] }
