--- a/examples/bls12-381-hash/Cargo.toml
+++ b/examples/bls12-381-hash/Cargo.toml
@@ -24,3 +24,6 @@ pairing-plus = { git = "https://github.com/algorand/pairing-plus" } # published 
 sha2-08 = { package = "sha2", version = "0.8" }
 sha2-09 = { package = "sha2", version = "0.9" }
 bls12_381 = {version = "0.6.0", features = ["experimental"] }
+curve_arithmetic = { git = "https://github.com/Concordium/concordium-base" }
+pairing = "0.15"
+group = "0.2"
