--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ members = [
     "examples/gf128",
     "examples/aes128-gcm",
     "examples/bls12-381-hash",
+    "examples/ed25519",
 ]
 default-members = [
     "lib",
@@ -63,5 +64,6 @@ default-members = [
     "examples/gf128",
     "examples/aes128-gcm",
     "examples/bls12-381-hash",
+    "examples/ed25519",
 ]
 exclude = [ "language" ]
