--- a/examples/ed25519/Cargo.toml
+++ b/examples/ed25519/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hacspec-ed25519"
-version = "1.0.0"
-authors = ["Kasper S. Nielsen <Kasper@s-nielsen.dk>", "Mathias Rud Laursen <mathias_rud@hotmail.com>"]
+version = "0.1.0"
+authors = ["Kasper S. Nielsen <ksn@cs.au.dk>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,13 +11,14 @@ path = "src/ed25519.rs"
 
 [dependencies]
 hacspec-lib = { path = "../../lib" }
-hacspec-attributes = { path = "../../utils/attributes", features = ["hacspec_unsafe"] }
-ed25519-dalek = "1"
+hacspec-sha512 = { path = "../sha512" }
 
 [dev-dependencies]
 quickcheck = "1"
 quickcheck_macros = "1"
-curve25519-dalek = "3.2.0"
+serde_json = "1.0"
+serde = {version = "1.0", features = ["derive"]}
+hacspec-dev = { path = "../../utils/dev" }
 
 
 
