--- a/examples/ed25519/Cargo.toml
+++ b/examples/ed25519/Cargo.toml
@@ -19,7 +19,8 @@ quickcheck_macros = "1"
 serde_json = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 hacspec-dev = { path = "../../utils/dev" }
-curve25519-dalek = "3"
+# curve25519-dalek = "3"
+rand = "0.8.4"
 
 
 
