--- a/coq/Makefile.conf
+++ b/coq/Makefile.conf
@@ -8,7 +8,7 @@
 #                                                                             #
 ###############################################################################
 
-COQMF_VFILES = src/MachineIntegers.v src/Lib.v src/Bls.v src/Chacha20.v src/Poly1305.v src/Chacha20poly1305.v src/Curve25519.v src/Sha256.v src/Aes.v
+COQMF_VFILES = src/MachineIntegers.v src/Lib.v src/QuickChickLib.v src/Bls12_381.v src/Chacha20.v src/Poly1305.v src/Chacha20poly1305.v src/Curve25519.v src/Sha256.v src/Aes.v
 COQMF_MLIFILES = 
 COQMF_MLFILES = 
 COQMF_MLGFILES = 
@@ -35,9 +35,9 @@ COQMF_CMDLINE_COQLIBS =
 ###############################################################################
 
 COQMF_LOCAL=0
-COQMF_COQLIB=/home/milo/.opam/coq-8.13/lib/coq/
-COQMF_DOCDIR=/home/milo/.opam/coq-8.13/doc/
-COQMF_OCAMLFIND=/home/milo/.opam/coq-8.13/bin/ocamlfind
+COQMF_COQLIB=/home/kasserne/.opam/4.11.1/lib/coq/
+COQMF_DOCDIR=/home/kasserne/.opam/4.11.1/doc/
+COQMF_OCAMLFIND=/home/kasserne/.opam/4.11.1/bin/ocamlfind
 COQMF_CAMLFLAGS=-thread -rectypes -w +a-4-9-27-41-42-44-45-48-58-67   -safe-string -strict-sequence
 COQMF_WARN=-warn-error +a-3
 COQMF_HASNATDYNLINK=true
