Handling non-std library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,82 @@
 [workspace]
 members = [
     "lib",
-    "provider",
-    "utils/dev",
-    "utils/derive",
-    "utils/enum-default",
-    "utils/evercrypt-provider",
-    "utils/secret-integers",
-    "utils/abstract-integers",
-    "utils/attributes",
-    "utils/rc-bench",
-    "utils/rc-tests",
-    "utils/util",
-    "examples-unsafe",
-    "no_std",
+    # "protocols/tls_cryptolib",
+    # "provider",
+    # "utils/dev",
+    # "utils/derive",
+    # "utils/evercrypt-provider",
+    # "utils/secret-integers",
+    # "utils/abstract-integers",
+    # "utils/attributes",
+    # "utils/rc-bench",
+    # "utils/rc-tests",
+    # "utils/util",
+    # "examples/curve25519",
+    # "examples/chacha20",
+    # "examples/ristretto",
+    # "examples/linalg",
+    # "examples/poly1305",
+    "examples/chacha20poly1305",
+    # "examples/gimli",
+    # "examples/sha256",
+    # "examples/sha3",
+    # "examples/ntru-prime",
+    # "examples-unsafe",
+    # "examples/riot-bootloader",
+    # "examples/riot-runqueue",
+    # "examples/hmac",
+    # "examples/hkdf",
+    # "examples/p256",
+    # "examples/bls12-381",
+    # "examples/ecdsa-p256-sha256",
+    # "examples/aes",
+    # "examples/gf128",
+    # "examples/aes128-gcm",
+    # "examples/bls12-381-hash",
+    # "examples/edwards25519",
+    # "examples/ed25519",
+    # "examples/no_std",
+    # "examples/rsa-pkcs1",
+    # "examples/bip-340",
+    # "examples/rsa-fdh-vrf",
 ]
 default-members = [
     "lib",
-    "provider",
-    "utils/dev",
-    "utils/derive",
-    "utils/secret-integers",
-    "utils/abstract-integers",
-    "utils/attributes",
-    "utils/util",
-    "examples-unsafe",
+    # "protocols/tls_cryptolib",
+    # "provider",
+    # "utils/dev",
+    # "utils/derive",
+    # "utils/secret-integers",
+    # "utils/abstract-integers",
+    # "utils/attributes",
+    # "utils/util",
+    # "examples/curve25519",
+    # "examples/chacha20",
+    # "examples/linalg",
+    # "examples/ristretto",
+    # "examples/poly1305",
+    "examples/chacha20poly1305",
+    # "examples/gimli",
+    # "examples/sha256",
+    # "examples/sha3",
+    # "examples/ntru-prime",
+    # "examples-unsafe",
+    # "examples/riot-bootloader",
+    # "examples/riot-runqueue",
+    # "examples/hmac",
+    # "examples/hkdf",
+    # "examples/p256",
+    # "examples/bls12-381",
+    # "examples/ecdsa-p256-sha256",
+    # "examples/aes",
+    # "examples/gf128",
+    # "examples/aes128-gcm",
+    # "examples/bls12-381-hash",
+    # "examples/edwards25519",
+    # "examples/ed25519",
+    # "examples/sha512",
+    # "examples/rsa-pkcs1",
+    # "examples/rsa-fdh-vrf",
 ]
 exclude = [ "language" , "examples" ]
