--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ members = [
     "examples/ed25519",
     "examples/no_std",
     "examples/rsa-pkcs1",
+    "examples/bip-340",
 ]
 default-members = [
     "lib",
