--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "utils/util",
     "examples/curve25519",
     "examples/chacha20",
+    "examples/ristretto",
     "examples/poly1305",
     "examples/chacha20poly1305",
     "examples/gimli",
@@ -47,6 +48,7 @@ default-members = [
     "utils/util",
     "examples/curve25519",
     "examples/chacha20",
+    "examples/ristretto",
     "examples/poly1305",
     "examples/chacha20poly1305",
     "examples/gimli",
