--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ members = [
     "examples/ed25519",
     "examples/no_std",
     "examples/rsa-pkcs1",
+    "examples/rsa-fdh-vrf",
 ]
 default-members = [
     "lib",
@@ -72,5 +73,6 @@ default-members = [
     "examples/ed25519",
     "examples/sha512",
     "examples/rsa-pkcs1",
+    "examples/rsa-fdh-vrf",
 ]
 exclude = [ "language" ]
