--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-    # "protocols/tls_cryptolib",
-    # "curve25519",
+    "protocols/tls_cryptolib",
+    "curve25519",
     "chacha20",
     "ristretto",
     "linalg",
@@ -15,16 +15,16 @@ members = [
     "riot-runqueue",
     "hmac",
     "hkdf",
-    # "p256",
-    # "bls12-381",
-    # "ecdsa-p256-sha256",
+    "p256",
+    "bls12-381",
+    "ecdsa-p256-sha256",
     "aes",
     "gf128",
     "aes128-gcm",
-    # "bls12-381-hash",
-    # "ed25519",
-    # "edwards25519",
-    # "edwards25519-hash",
+    "bls12-381-hash",
+    "ed25519",
+    "edwards25519",
+    "edwards25519-hash",
     # "no_std",
     "rsa-pkcs1",
     "bip-340",
