--- a/.github/workflows/no_std.yml
+++ b/.github/workflows/no_std.yml
@@ -17,8 +17,8 @@ jobs:
         run: rustup target add thumbv7m-none-eabi
         working-directory: ./examples/no_std
       - name: Build no_std release
-        run: cargo build --verbose --release
+        run: cargo build --verbose --release && cd examples && cargo build --verbose --release
         working-directory: ./examples/no_std
       - name: Run no_std release tests
-        run: cargo run --verbose --release
+        run: cargo run --verbose --release && cd examples && cargo run --verbose --release
         working-directory: ./examples/no_std
