--- a/.github/workflows/generate_examples.yml
+++ b/.github/workflows/generate_examples.yml
@@ -17,4 +17,8 @@ jobs:
         with:
           submodules: true
       - name: Update proof files for examples 
-        run: cargo clean && cargo build --verbose --release && cd examples && cargo clean && cargo build --verbose --release && cargo hacspec -e v --dir ../coq/src/ "*" --vc-update && cargo hacspec -e ec --dir ../easycrypt/ "*" --vc-update && cargo hacspec -e fst --dir ../fstar/ "*" --vc-update
+        run: cargo clean && cargo build --verbose --release && cargo install --path language && \
+	cd examples && cargo clean && cargo build --verbose --release && \
+	cargo hacspec -e v --dir ../coq/src/ "*" --vc-update && \
+	cargo hacspec -e ec --dir ../easycrypt/ "*" --vc-update && \
+	cargo hacspec -e fst --dir ../fstar/ "*" --vc-update
