Readded .cargo/config.toml and updated .yml scripts

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -17,6 +17,12 @@ jobs:
         with:
           submodules: true
       - name: Build release
-        run: cargo build --verbose --release && cd examples && cargo build --verbose --release
+        run: cargo build --verbose --release
+      - name: Build release - Examples
+        run: cargo build --verbose --release
+        working-directory: ./examples
       - name: Run release tests
-        run: cargo test --verbose --release && cd examples && cargo build --verbose --release
+        run: cargo test --verbose --release
+      - name: Run release tests - Examples
+        run: cargo test --verbose --release
+        working-directory: ./examples
