--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "provider",
     "utils/dev",
     "utils/derive",
+    "utils/enum-default",
     "utils/evercrypt-provider",
     "utils/secret-integers",
     "utils/abstract-integers",
