--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     "examples/poly1305",
     "examples/chacha20poly1305",
     "examples/gimli",
+    "examples/sha1",
     "examples/sha256",
     "examples/sha3",
     "examples/ntru-prime",
