--- a/.github/workflows/generate_examples.yml
+++ b/.github/workflows/generate_examples.yml
@@ -35,6 +35,7 @@ jobs:
               startGroup "Opam config"
                 opam config list; opam repo list; opam list
                 opam repo add coq-released https://coq.inria.fr/opam/released --all-switches
+                opam update
                 opam install coq-compcert coq-coqprime coq-quickchick --yes
               endGroup
           before_script: |
@@ -55,7 +56,11 @@ jobs:
       #         startGroup "Opam config"
       #           opam config list; opam repo list; opam list
       #           opam repo add coq-released https://coq.inria.fr/opam/released --all-switches
-      #           opam install ssprove jasmin coqword --yes
+      #           opam update
+      #           opam pin coq-mathcomp-word https://github.com/jasmin-lang/coqword.git#9012f08c33a8c0d3b65e6e9494fd792522bf7b5c -y
+      #           opam pin jasmin https://github.com/jasmin-lang/jasmin.git#ec7e09451614d011f880da33201cf7eba1e6aea3 -y
+      #           opam pin ssprove https://github.com/SSProve/ssprove.git#bead4e76acbb69b3ecf077cece56cd3fbde501e3 -y
+      #           opam upgrade -y
       #         endGroup
       #     before_script: |
       #         startGroup "Workaround permission issue"
