--- a/.github/workflows/generate_examples_ssprove.yml
+++ b/.github/workflows/generate_examples_ssprove.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/cmester0/hacspec_ssprove:8.15.2
+      image: ghcr.io/hacspec/hacspec_ssprove:8.15.2
       options: --user root
     steps:
     - uses: actions/checkout@v3
@@ -16,13 +16,13 @@ jobs:
         opam switch 4.12.0
         eval $(opam env)
         coqtop --version
-        /home/coq/.cargo/bin/cargo clean
-        /home/coq/.cargo/bin/cargo build --verbose
-        /home/coq/.cargo/bin/cargo install --path language
+        cargo clean
+        cargo build --verbose
+        cargo install --path language
         cd examples
-        /home/coq/.cargo/bin/cargo clean
-        /home/coq/.cargo/bin/cargo build --verbose
-        /home/coq/.cargo/bin/cargo hacspec -e v_ssprove --dir ../coq_ssprove/src/ --vc-dir ../coq_ssprove/ --vc-update "*"
+        cargo clean
+        cargo build --verbose
+        cargo hacspec -e v_ssprove --dir ../coq_ssprove/src/ --vc-dir ../coq_ssprove/ --vc-update "*"
         cd ../coq_ssprove
         coq_makefile -f _CoqProject -o Makefile
         make
