Added cargo to path

--- a/.github/workflows/generate_examples_ssprove.yml
+++ b/.github/workflows/generate_examples_ssprove.yml
@@ -12,6 +12,7 @@ jobs:
     - name: Build
       run: |
         export HOME=/home/coq
+        export PATH=$HOME/.cargo/bin:$PATH
         env
         opam switch 4.12.0
         eval $(opam env)
