--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,9 +17,11 @@ jobs:
           cargo install --path language
           RUSTFLAGS="-C instrument-coverage" LLVM_PROFILE_FILE="%m.profraw" cargo test --test coverage
           grcov ./lib/ --binary-path ./target/debug/ -s ./lib/ -t lcov --branch --ignore-not-existing -o lcov.info
-      - uses: zgosalvez/github-actions-report-lcov@v1
-        coverage-files: lcov.info
-        minimum-coverage: 90
-        artifact-name: code-coverage-report
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        working-directory: ./lib/
+      - name: Report code coverage
+        uses: zgosalvez/github-actions-report-lcov@v1
+        with:
+          coverage-files: lcov.info
+          minimum-coverage: 90
+          artifact-name: code-coverage-report
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          working-directory: ./lib/
