--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,32 +1,32 @@
 [workspace]
 members = [
     # "protocols/tls_cryptolib",
-    # "curve25519",
-    # "chacha20",
-    # "ristretto",
+    "curve25519",
+    "chacha20",
+    "ristretto",
     # "linalg",
-    # "poly1305",
-    # "chacha20poly1305",
+    "poly1305",
+    "chacha20poly1305",
     # "gimli",
-    # "sha1",
-    # "sha256",
-    # "sha3",
-    # "ntru-prime",
-    # "riot-bootloader",
-    # "riot-runqueue",
+    "sha1",
+    "sha256",
+    "sha3",
+    "ntru-prime",
+    "riot-bootloader",
+    "riot-runqueue",
     # "hmac",
     # "hkdf",
-    # "p256",
+    "p256",
     "bls12-381",
-    # "ecdsa-p256-sha256",
-    # "aes",
-    # "gf128",
-    # "aes128-gcm",
-    # "bls12-381-hash",
-    # "ed25519",
-    # "edwards25519",
-    # "edwards25519-hash",
+    "ecdsa-p256-sha256",
+    "aes",
+    "gf128",
+    "aes128-gcm",
+    "bls12-381-hash",
+    "ed25519",
+    "edwards25519",
+    "edwards25519-hash",
     # "rsa-pkcs1",
-    # "bip-340",
+    "bip-340",
     # "rsa-fdh-vrf",
 ]
