--- a/.github/workflows/generate_files.yml
+++ b/.github/workflows/generate_files.yml
@@ -23,3 +23,4 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Automated file generation"
+          file_pattern: "coq/src/*.v coq/_vc/*.v"
