WIP: Getting rid of some macros in the library

--- a/utils/secret-integers/Cargo.toml
+++ b/utils/secret-integers/Cargo.toml
@@ -10,6 +10,9 @@ keywords = ["secret", "constant-time"]
 readme = "README.md"
 
 
+[dependencies]
+num = { version = "0.4" }
+
 [[example]]
 name = "dalek"
 crate-type = ["staticlib"]
