--- a/fstar/Makefile
+++ b/fstar/Makefile
@@ -5,16 +5,11 @@
 FSTAR ?= $(FSTAR_HOME)/bin/fstar.exe --z3rlimit_factor 32
 
 # The root files of your project, from which to begin scanning dependences
-FSTAR_FILES ?= Hacspec.Poly1305.fst Hacspec.Chacha20.fst \
-	Hacspec.Chacha20Poly1305.fst \
-	Hacspec.Sha256.fst Hacspec.Sha3.fst Hacspec.P256.fst \
-	Hacspec.Curve25519.fst Hacspec.Hmac.fst \
-	Hacspec.NtruPrime.fst Hacspec.Hkdf.fst \
-	Hacspec.Riot.Bootloader.fst Hacspec.Riot.Runqueue.fst
+FSTAR_FILES ?= Hacspec.Poly1305.fst Hacspec.Chacha20.fst  Hacspec.Chacha20.Proof.fst  Hacspec.Poly1305.Proof.fst
 
 # The paths to related files which to include for scanning
 #   -- No need to add FSTAR_HOME/ulib; it is included by default
-INCLUDE_PATHS ?= $(HACL_HOME)/lib
+INCLUDE_PATHS ?= $(HACL_HOME)/lib $(HACL_HOME)/specs
 
 # The executable file you want to produce
 PROGRAM ?= specs.exe
@@ -97,9 +92,9 @@ include .depend
 
 # The default target is to verify all files, without extracting anything
 # It needs to be here, because it reads the variable ALL_FST_FILES in .depend
-verify-all: $(addsuffix .checked, $(ALL_FST_FILES))
+verify-all: $(addsuffix .checked, $(FSTAR_FILES))
 
-lax-all: $(addsuffix .checked.lax, $(ALL_FST_FILES))
+lax-all: $(addsuffix .checked.lax, $(FSTAR_FILES))
 
 
 %.fst-in %.fsti-in:
