--- a/coq_ssprove/coq-hacspec-ssprove.opam
+++ b/coq_ssprove/coq-hacspec-ssprove.opam
@@ -1,14 +1,14 @@
 opam-version: "2.0"
-name: "hacspec-coq-ssprove"
+name: "coq-hacspec-ssprove"
 version: "dev"
 synopsis: "Hacspec coq library"
 maintainer: "Lasse Letager Hansen <letager@cs.au.dk>"
-authors: "Lasse Letager Hansen <letager@cs.au.dk>"
+authors: ["Lasse Letager Hansen <letager@cs.au.dk>"]
 homepage: "https://github.com/hacspec/hacspec"
 bug-reports: "https://github.com/hacspec/hacspec/issues"
 depends: [
-  "ssprove" {= "dev"} # jasmin
-  "jasmin" {= "dev"} # 3d40bc89
+  "ssprove" {= "dev"}
+  "jasmin" {= "dev"}
   "coq" {>= "8.15.2"}
 ]
 build: [
