--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -31,5 +31,6 @@ members = [
     "rsa-pkcs1",
     "bip-340",
     "rsa-fdh-vrf",
-    "coverage_test"
+    "coverage_test",
+    "pearlite-example"
 ]
