--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -21,6 +21,7 @@ members = [
     "bls12-381",
     "ecdsa-p256-sha256",
     "aes",
+    "aes_jazz",
     "gf128",
     "aes128-gcm",
     "bls12-381-hash",
@@ -32,5 +33,6 @@ members = [
     "bip-340",
     "rsa-fdh-vrf",
     "coverage_test",
-    "pearlite-example"
+    "pearlite-example",
+    "xor",
 ]
