--- a/utils/secret-integers/Cargo.toml
+++ b/utils/secret-integers/Cargo.toml
@@ -17,3 +17,9 @@ crate-type = ["staticlib"]
 [[example]]
 name = "chacha20"
 crate-type = ["staticlib"]
+
+[dependencies]
+creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "417b958b11c5a4a4f89da510b9e0a87433d5836e" } # branch = "master"
+
+[features]
+contracts = ["creusot-contracts/contracts"]
