--- a/utils/attributes/Cargo.toml
+++ b/utils/attributes/Cargo.toml
@@ -13,15 +13,17 @@ proc-macro = true
 
 [dependencies]
 syn = { version = "1.0.17", features= ["full", "visit"] }
-proc-macro2 = { version = "1.0.10", features = ["span-locations"] }
+# proc-macro2 = { version = "1.0.10", features = ["span-locations"] }
 ansi_term = "0.12.1"
 quote = "1.0"
 serde = "1.0"
 serde_json = "1.0"
 hacspec-util = { path = "../util", version = "0.1.0-beta.1" }
+creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "417b958b11c5a4a4f89da510b9e0a87433d5836e" } # branch = "master"
 
 [features]
 default = [ "hacspec_unsafe" ]
 print_attributes = []
 update_allowlist = [ "print_attributes" ]
 hacspec_unsafe = []
+contracts = ["creusot-contracts/contracts"]
