--- a/utils/util/Cargo.toml
+++ b/utils/util/Cargo.toml
@@ -11,3 +11,7 @@ repository = "https://github.com/hacspec/hacspec"
 [dependencies]
 serde = {version = "1.0", features = ["derive"]}
 syn = { version = "1.0.17", features= ["full", "visit"] }
+creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "417b958b11c5a4a4f89da510b9e0a87433d5836e" } # branch = "master"
+
+[features]
+contracts = ["creusot-contracts/contracts"]
