--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -24,11 +24,11 @@ members = [
     "aes_jazz",
     "gf128",
     "aes128-gcm",
-    "bls12-381-hash",
+    # "bls12-381-hash",
     "ed25519",
     "edwards25519",
-    "edwards25519-hash",
-    "edwards25519-ecvrf",
+    # "edwards25519-hash",
+    # "edwards25519-ecvrf",
     "rsa-pkcs1",
     "bip-340",
     "rsa-fdh-vrf",
