--- a/examples/poly1305/Cargo.toml
+++ b/examples/poly1305/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/poly1305.rs"
 
 [dependencies]
 hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
+creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "417b958b11c5a4a4f89da510b9e0a87433d5836e" } # branch = "master"
 
 [dev-dependencies]
 serde_json = "1.0"
