Working version -- depends on local fork

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,29 @@
 [workspace]
 members = [
     "lib",
-    "provider",
-    "utils/dev",
-    "utils/derive",
-    "utils/enum-default",
-    "utils/evercrypt-provider",
-    "utils/secret-integers",
-    "utils/abstract-integers",
+    # "provider",
+    # "utils/dev",
+    # "utils/derive",
+    # "utils/enum-default",
+    # "utils/evercrypt-provider",
+    # "utils/secret-integers",
+    # "utils/abstract-integers",
     # "utils/attributes",
-    "utils/rc-bench",
-    "utils/rc-tests",
-    "utils/util",
+    # "utils/rc-bench",
+    # "utils/rc-tests",
+    # "utils/util",
     # "examples-unsafe",
     "no_std",
 ]
 default-members = [
     "lib",
-    "provider",
-    "utils/dev",
-    "utils/derive",
-    "utils/secret-integers",
-    "utils/abstract-integers",
+    # "provider",
+    # "utils/dev",
+    # "utils/derive",
+    # "utils/secret-integers",
+    # "utils/abstract-integers",
     # "utils/attributes",
-    "utils/util",
+    # "utils/util",
     # "examples-unsafe",
 ]
 exclude = [ "language" , "examples" ]
