--- a/utils/abstract-integers/Cargo.toml
+++ b/utils/abstract-integers/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 [dependencies]
 num = { version = "0.4", default-features = false }
 num-bigint = { version = "0.4", default-features = false }
-creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "417b958b11c5a4a4f89da510b9e0a87433d5836e" } # branch = "master"
+creusot-contracts = { git = "https://github.com/cmester0/creusot", branch = "add_default_to_vec" } # branch = "master"
 
 [features]
 default = ["std"]
