--- a/utils/secret-integers/Cargo.toml
+++ b/utils/secret-integers/Cargo.toml
@@ -19,7 +19,7 @@ name = "chacha20"
 crate-type = ["staticlib"]
 
 [dependencies]
-creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "417b958b11c5a4a4f89da510b9e0a87433d5836e" } # branch = "master"
+creusot-contracts = { git = "https://github.com/cmester0/creusot", branch = "add_default_to_vec" } # branch = "master"
 
 [features]
 contracts = ["creusot-contracts/contracts"]
