--- a/examples/protocols/nsl/Cargo.toml
+++ b/examples/protocols/nsl/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
 [dependencies]
 hacspec-lib = { path = "../../../lib", version = "0.1.0-beta.1" }
+codec = { path = "codec" }
 serde = { version = "1.0", features = ["derive"] }
-
+syn = "1.0" 
+quote = "1.0" 
