--- a/examples/protocols/runtime/Cargo.toml
+++ b/examples/protocols/runtime/Cargo.toml
@@ -1,15 +1,13 @@
 [package]
-name = "nsl"
+name = "runtime"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-
 [dependencies]
 hacspec-lib = { path = "../../../lib", version = "0.1.0-beta.1" }
-runtime = { path = "../runtime", version = "0.1.0" }
-codec = { path = "../runtime/codec" }
+codec = { path = "codec" }
 serde = { version = "1.0", features = ["derive"] }
 syn = "1.0" 
 quote = "1.0" 
