--- a/examples/protocols/runtime/Cargo.toml
+++ b/examples/protocols/runtime/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 hacspec-lib = { path = "../../../lib", version = "0.1.0-beta.1" }
+tls_cryptolib = { path = "../tls_cryptolib", version = "0.1.0" }
 codec = { path = "codec" }
 serde = { version = "1.0", features = ["derive"] }
 syn = "1.0" 
 quote = "1.0" 
+rand = "0.8.5"
+rand_chacha = "0.3.1"
