--- a/examples/protocols/nsl/Cargo.toml
+++ b/examples/protocols/nsl/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 
 [dependencies]
-hacspec-lib = { path = "../../../lib", version = "0.1.0-beta.1" }
+hacspec-lib = { path = "../../../lib", features = ["release"] }
 runtime = { path = "../runtime", version = "0.1.0" }
 codec = { path = "../runtime/codec" }
 serde = { version = "1.0", features = ["derive"] }
