--- a/examples/protocols/runtime/Cargo.toml
+++ b/examples/protocols/runtime/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hacspec-lib = { path = "../../../lib", version = "0.1.0-beta.1" }
-tls_cryptolib = { path = "../tls_cryptolib", version = "0.1.0" }
+hacspec-lib = { path = "../../../lib", features = ["release"] }
+libcrux = { path = "../../../../rwc-2023-talk/libcrux"}
 codec = { path = "codec" }
 serde = { version = "1.0", features = ["derive"] }
 syn = "1.0" 
